Updates for stem

--- a/views/layouts/page.html.twig
+++ b/views/layouts/page.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html {% language_attributes() %} lang="en">
+<html {{ language_attributes }} lang="en">
     <head>
-        <meta charset="{% bloginfo( 'charset' ) %}">
+        <meta charset="{{ bloginfo( 'charset' ) }}">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="distribution" content="global" />
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
